# ada_ros2

./: .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  frames_2023-09-07_16.00.27.gv
.github/: LICENSE_HEADER.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: pre-commit.yaml
ada_calibrate_camera/: README.md  calibrate_camera_start.py  package.xml  setup.cfg  setup.py
ada_calibrate_camera/ada_calibrate_camera/: __init__.py  calibrate_camera_node.py  camera_calibration.py  charuco_detector.py  helpers.py  publish_camera_extrinsics_node.py
ada_calibrate_camera/config/: calibrate_camera.yaml
ada_calibrate_camera/config/calibs/: auto.yaml  manual.yaml
ada_calibrate_camera/data/2024_10_09_21_12_30/: 0_sample.npz  11_calib.npz  11_sample.npz  13_sample.npz  14_sample.npz  15_sample.npz  16_calib.npz  17_sample.npz  18_calib.npz  1_sample.npz  20_calib.npz  20_sample.npz  22_sample.npz  23_calib.npz  24_calib.npz  25_calib.npz  26_sample.npz  27_sample.npz  29_calib.npz  30_calib.npz  30_sample.npz  32_sample.npz  33_sample.npz  34_sample.npz  35_calib.npz  36_calib.npz  39_sample.npz  3_calib.npz  3_sample.npz  40_calib.npz  41_calib.npz  41_sample.npz  42_calib.npz  42_sample.npz  43_calib.npz  44_calib.npz  45_sample.npz  48_calib.npz  50_calib.npz  50_sample.npz  (+26 more)
ada_calibrate_camera/data/2024_10_16_17_16_32/: 0_sample.npz  10_sample.npz  11_sample.npz  12_sample.npz  13_sample.npz  14_sample.npz  15_sample.npz  16_sample.npz  17_sample.npz  18_sample.npz  19_sample.npz  1_sample.npz  20_sample.npz  21_sample.npz  22_sample.npz  23_sample.npz  2_sample.npz  3_sample.npz  4_sample.npz  5_sample.npz  6_sample.npz  7_sample.npz  8_sample.npz  9_sample.npz
ada_calibrate_camera/launch/: publish_camera_extrinsics_launch.xml
ada_camera/: CMakeLists.txt  package.xml
ada_camera/src/: main.cpp
ada_description/: CMakeLists.txt  package.xml
ada_description/launch/: view_ada.launch.py
ada_description/meshes/: arm.dae  base.dae  finger_distal.dae  finger_proximal.dae  forearm.dae  hand_3finger.dae  ring_big.dae  ring_small.dae  shoulder.dae  wrist.dae
ada_description/meshes/camera/: 2023_03_09_cameraStabilizer.stl  2023_03_09_nanoEnclosureTop.stl  2023_03_16_nanoEnclosureBottom.stl  2023_06_06_cameraBackMount.stl  2023_06_06_nanoEnclosureTopCameraBack.stl  2023_09_21_nanoEnclosureBottom.stl  2023_09_21_nanoEnclosureFrontStabilizer.stl  2023_09_28_nanoEnclosureBottom.stl  2023_11_07_screwHead.stl
ada_description/meshes/forque/: 2023_03_09_FTArmMount.stl  2023_03_09_FTMount.stl  2023_03_09_FTMountclosed.stl  2023_03_09_wirelessFTAntenna.stl  2024_01_18_FTArmMount.stl  2024_01_18_FTMount.stl  2024_06_24_forkHandleCover.stl  2024_06_24_forkHandleHollow.stl  AFStabilizer.stl  ATI-9105-TW-NANO25-E.stl  XC-430_idle.stl  fork_tine.stl  fr12-h103.stl  fr12-s101.stl  roll_to_ft_adapter.stl
ada_description/rviz/: view_robot.rviz
ada_description/scripts/: camera_calibration.py
ada_description/urdf/: ada.xacro  ada_standalone.xacro  j2n6s200.xacro  j2n6s200_standalone.xacro  j2n6s300.xacro  j2n6s300_standalone.xacro  j2n7s300.xacro  j2n7s300_standalone.xacro  j2s6s200.xacro  j2s6s200_integration.xacro  j2s6s200_standalone.xacro  j2s6s300.xacro  j2s6s300_integration.xacro  j2s6s300_standalone.xacro  j2s7s300.xacro  j2s7s300_standalone.xacro  kinova_common.xacro  kinova_finger_set.xacro  kinova_inertial.xacro
ada_description/urdf/camera/: camera.xacro  camera_standalone.xacro  d415urdf.xacro
ada_description/urdf/forque/: forque.xacro  forque_standalone.xacro
ada_fork_joint/: README.md  package.xml  setup.cfg  setup.py
ada_fork_joint/ada_fork_joint/: fork_jointstate_publisher.py
ada_fork_joint/config/: fork_params.yaml
ada_fork_joint/launch/: ada_imu.launch.py
ada_hardware/: CMakeLists.txt  ada_hardware.xml  package.xml
ada_hardware/config/: ada_hardware_forward_controllers.yaml
ada_hardware/include/ada_hardware/: dynamixel_hardware.hpp  isaacsim.hpp  jaco2.hpp
ada_hardware/launch/: ada_hardware.launch.py
ada_hardware/src/: dynamixel_hardware.cpp  isaacsim.cpp  jaco2.cpp
ada_hardware/test/: test_dynamixel.cpp  test_isaacsim.cpp  test_jaco2.cpp
ada_hardware/urdf/: ada_hardware.ros2_control.xacro  ada_hardware.xacro
ada_imu/: README.md  package.xml  setup.cfg  setup.py
ada_imu/ada_imu/: imu_input_playground.py  imu_jointstate_publisher.py  imu_read.py
ada_imu/config/: imu_params.yaml
ada_imu/launch/: ada_imu.launch.py
ada_imu/scripts/: imu_read.py
ada_imu/test/: test_pep257.py
ada_moveit/: .setup_assistant  CMakeLists.txt  README.md  calibrate_camera_start.py  package.xml
ada_moveit/config/: ada.ros2_control.xacro  ada.srdf  ada.urdf.xacro  calibrate_camera.yaml  fake_controllers.yaml  gazebo_ada.urdf  hybrid_controllers.yaml  initial_positions.yaml  isaac_controllers.yaml  joint_limits.yaml  kinematics.yaml  mock_controllers.yaml  mock_servo.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  real_calibrate_camera_controllers.yaml  real_controllers.yaml  real_servo.yaml  ros2_controllers.yaml  ros_controllers.yaml  sensors_3d.yaml  servo.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
ada_moveit/launch/: articulable_fork.launch.py  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo.launch.py  demo_feeding.launch.py  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  move_group.launch.py  moveit.rviz  moveit_rviz.launch.py  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  (+12 more)
ada_watchdog_listener/: package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
jaco_hardware/: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml
jaco_hardware/calib/: GravComParams_Empty.txt
jaco_hardware/cmake/: ClangFormat.cmake
jaco_hardware/include/: JacoRobot.h
jaco_hardware/src/: JacoRobot.cpp  main.cpp
log/: latest_build
scripts/: ada_no_forque.urdf  articulated_fork.urdf  articulated_fork_kinematics.ipynb  max_omega.ipynb  max_torque.ipynb
(+232 files in other folders)
