<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ada_calibrate_camera</name>
  <version>0.0.0</version>
  <description>This package contains a script to calibrate ADA's camera.</description>
  <maintainer email="amaln@cs.washington.edu">Amal Nanavati</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>ros2_numpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
