<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ada_camera</name>
  <version>0.0.0</version>
  <description>Hardware Interface for Networked Realsense Camera</description>
  <maintainer email="ekgordon@cs.uw.edu">Ethan K. Gordon</maintainer>
  <license>BSD-3-Clause</license>

  <depend>librealsense</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <depend>compressed_image_transport</depend>
  <depend>image_transport_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
