<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ada_description</name>
  <version>0.0.2</version>
  <description>
    URDF description for Assistive Dexterous Arm
  </description>

  <author>Ethan K. Gordon</author>

  <maintainer email="ekgordon@cs.washington.edu">Ethan K. Gordon</maintainer>

  <license>BSD-3-Clause</license>

  <url type="bugtracker">https://github.com/personalrobotics/ada_ros2/issues</url>
  <url type="repository">https://github.com/personalrobotics/ada_ros2</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>liburdfdom-tools</test_depend>
  <test_depend>xacro</test_depend>

  <export>
  </export>
</package>
